# Gmaps-Scraper

./: .gitignore  README.md  pyproject.toml
event_scraper/pages/: scraper.py
event_scraper/tests/: config.json  test_scraper.py
event_scraper/tests/session/: Evanston, IL_url.json  Oak Park, IL_url.json  St. Charles, IL_url.json  Wheaton, IL_url.json  spreadsheet.json
event_scraper/utilities/: logger.py  session.py  sheets.py  xpath.py
